# elegant-django

./: .coveragerc  .dockerignore  .drone.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  README_ZH.md  gulpfile.js  manage.py  mkdocs.yml  package.json  pyproject.toml  runtests.py  setup.py  tox.ini
docs/: index.md
elegant/: __init__.py  admin.py  apps.py  cache.py  compat.py  components.py  config.py  constants.py  utils.py  views.py
elegant/mixins/: __init__.py  actions.py  confirm.py  elegant.py  objects.py
elegant/static/actions/js/: jquery.dropdown.min.js
elegant/static/admin/css/: confirmation.css
elegant/static/elegant/bootstrap/css/: bootstrap.css
elegant/static/elegant/bootstrap/js/: bootstrap.js  bootstrap.min.js
elegant/static/elegant/css/: dashboard.css  date_range_filter.css  djangocms.css  elegant.css  extra.css  suit.css
elegant/static/elegant/elegant/css/: date_range_filter.css  djangocms.css  elegant.css  filer.css  jquery.dropdown.min.css
elegant/static/elegant/elegant/js/: djangocms.js  elegant.js  jquery.autosize-min.js  jquery.dropdown.js  sortable.changelist.js  sortable.tabular.inline.js  sortables.js
elegant/static/elegant/js/: djangocms.js  elegant.js  jquery.autosize-min.js  jquery.dropdown.js  sortable.changelist.js  sortable.stacked.inline.js  sortables.js  suit-form-confirm.js  suit.js
elegant/static/elegant/sortable/js/: jquery-ui-1.10.3.sortable.min.js  sortable.tabular.inline.js
elegant/static/otto/js/: chart.min.js
elegant/static/sortable/js/: sortable.changelist.js  sortable.stacked.inline.js
elegant/templates/: 403.html  404.html  500.html
elegant/templates/admin/: app_index.html  base.html  base_site.html  change_form.html  change_list.html  change_list_results.html  date_range_filter.html  delete_confirmation.html  delete_selected_confirmation.html  index.html  login.html  object_history.html  page_submit_line.html  pagination.html  search_form.html  submit_line.html
elegant/templates/admin/auth/user/: change_password.html
elegant/templates/admin/cms/page/: change_form.html  change_list.html  plugin_change_form.html
elegant/templates/admin/edit_inline/: stacked.html  tabular.html
elegant/templates/admin/filer/: change_form.html
elegant/templates/admin/filer/folder/: change_form.html  choose_images_resize_options.html  directory_listing.html  directory_table.html
elegant/templates/admin/filer/tools/clipboard/: clipboard.html
elegant/templates/admin/filer2/: breadcrumbs.html  change_form.html  delete_confirmation.html
elegant/templates/admin/filer2/folder/: change_form.html  directory_listing.html  directory_table.html
elegant/templates/admin/import_export/: change_list_export.html  change_list_import.html  change_list_import_export.html  export.html  import.html
elegant/templates/admin/includes/: fieldset.html
elegant/templates/admin/object_actions/: change_form.html  change_list.html
elegant/templates/admin/row_actions/: dropdown.html
elegant/templates/admin/widgets/: date.html  time.html
elegant/templates/confirm/: action_confirmation.html  change_confirmation.html
elegant/templates/elegant/: error_base.html  menu.html
elegant/templates/elegant/actions/: dropdown.html
elegant/templates/elegant/confirm/: action_confirmation.html
elegant/templates/elegant/includes/: change_form_includes.html
elegant/templates/object_actions/: change_list.html
elegant/templates/otto/: analytics.html
elegant/templates/registration/: logged_out.html  password_change_form.html
elegant/templates/reversion/: recover_form.html  recover_list.html  revision_form.html
elegant/templates/suit_object_tools/: change_form.html
elegant/templatetags/: elegant_formatting.py  elegant_list.py  elegant_menu.py  elegant_tags.py  suit_analytics.py  suit_list.py  suit_menu.py  suit_tags.py
elegant/widgets/: __init__.py  elegant.py  filter.py
example/: manage.py  requirements.txt
example/example/: admin.py  apps.py  models.py  settings.py  urls.py  views.py  widgets.py  wsgi.py
scripts/: static_css.py  static_html.py  static_js.py  static_tpl.py
tests/: __init__.py  config.py  filter.py  mixins.py  models.py  requirements.txt  settings.py  test.py  utils.py  widgets.py
tests/templates/: form_tabs.py
tests/templatetags/: elegant_list.py  elegant_menu.py  elegant_tags.py  suit_list.py  suit_tags.py
tests/urls/: __init__.py  admin_at_root.py  admin_custom.py  admin_i18n.py
